fixing gap in scorepage

--- a/src/pages/ScorePage.css
+++ b/src/pages/ScorePage.css
@@ -3,6 +3,11 @@
     flex-direction: column;
     gap:12px;
 }
+.score-content{
+    display: flex;
+    flex-direction: column;
+    gap:12px;
+}
 .score-card{
     width:100%;
     height:242px;
